use library @latest intead of specific version

--- a/src/README
+++ b/src/README
@@ -46,7 +46,7 @@ The nodes in this package are compatible with standard WebAudio nodes.  They can
 To include the High Fidelity Core Audio Engine library in your project, use npm:
 
 ```sh
-npm install hifi-web-audio@1.0.0-0 --registry https://npm.highfidelity.com/
+npm install hifi-web-audio@latest --registry https://npm.highfidelity.com/
 ```
 
 # Getting Started
